--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
 
       gtag('config', 'G-V64YC022E9');
     </script> -->
-    <title>AirConf</title>
+    <title>Code Converse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
